--- a/index.html
+++ b/index.html
@@ -248,23 +248,24 @@ header img:hover {
 </head>
 
 <body>
-    <header class="bg-dark text-white text-center py-5">
-        <div class="container">
-            <img src="ana.jpeg" alt="Abbes Abd Ennour" class="rounded-circle mb-3">
-            <h1 class="display-4">Abbes Abd Ennour</h1>
-            <p class="lead">Software Developer | Frontend, Backend & Game Dev</p>
-            <div class="d-flex justify-content-center">
-                <a href="https://www.linkedin.com/in/abd-ennour-abbes-208170276/" target="_blank"
-                    class="btn btn-outline-light mx-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                <a href="https://github.com/abbestlm" target="_blank" class="btn btn-outline-light mx-2"><i
-                        class="fab fa-github"></i> GitHub</a>
-                <a href="mailto:abbes.abdennour13@gmail.com" class="btn btn-outline-light mx-2"><i
-                        class="fas fa-envelope"></i> Email</a>
-                <a href="https://wa.me/+213553379103" target="_blank" class="btn btn-outline-light mx-2"><i
-                        class="fab fa-whatsapp"></i> WhatsApp</a>
-            </div>
+<header class="bg-dark text-white text-center py-5">
+    <div class="container">
+        <img src="ana.jpeg" alt="Abbes Abd Ennour" class="rounded-circle mb-3">
+        <h1 class="display-4">Abbes Abd Ennour</h1>
+        <p class="lead">Software Developer | Frontend, Backend & Game Dev</p>
+        <div class="d-flex justify-content-center">
+            <a href="https://www.linkedin.com/in/abd-ennour-abbes-208170276/" target="_blank" class="text-white mx-3"><i
+                    class="fab fa-linkedin fa-3x"></i></a>
+            <a href="https://github.com/abbestlm" target="_blank" class="text-white mx-3"><i
+                    class="fab fa-github fa-3x"></i></a>
+            <a href="mailto:abbes.abdennour13@gmail.com" class="text-white mx-3"><i
+                    class="fas fa-envelope fa-3x"></i></a>
+            <a href="https://wa.me/+213553379103" target="_blank" class="text-white mx-3"><i
+                    class="fab fa-whatsapp fa-3x"></i></a>
         </div>
-    </header>
+    </div>
+</header>
+
 <section class="bg-light py-5 animated-section" id="projects">
     <div class="container">
         <div class="text-center mb-4">
