--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ header img:hover {
 <section class="bg-light py-5 animated-section" id="projects">
     <div class="container">
         <div class="text-center mb-4">
-    <button class="btn btn-primary" type="button" id="toggleProjects">Show</button>
+            <button class="btn btn-primary" type="button" id="toggleProjects">Show</button>
         </div>
         <div class="projects-content collapse show" id="projectsContent">
             <div class="row">
@@ -334,15 +334,15 @@ header img:hover {
                             <h5 class="card-title">The Giving Water</h5>
                             <p class="card-text flex-grow-1">Created an application using React, Node.js, and Express.js
                                 to manage and distribute water resources. This project demonstrates full-stack
-                                development skills and modern web technologies. <strong>Still Under Development</strong>
-                            </p>
+                                development skills and modern web technologies.</p>
                             <div class="mt-auto btn-container">
-                                <a href="#" class="btn btn-secondary btn-outline-light disabled w-100">Not Available</a>
+                                <a href="https://github.com/abbestlm/thegivingwater"
+                                    class="btn btn-primary btn-outline-light w-100" target="_blank">Source Code</a>
                             </div>
                             <!-- Progress Bar -->
                             <div class="progress mt-3">
-                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
-                                    aria-valuemin="0" aria-valuemax="100">80% Complete</div>
+                                <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                    aria-valuemin="0" aria-valuemax="100">Completed</div>
                             </div>
                         </div>
                     </div>
@@ -367,11 +367,30 @@ header img:hover {
                         </div>
                     </div>
                 </div>
+                <!-- Project 5: Stock Price Checker -->
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card project-card h-100">
+                        <img src="project5.png" class="card-img-top" alt="Stock Price Checker">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Stock Price Checker</h5>
+                            <p class="card-text flex-grow-1">Developed a web application that allows users to check
+                                real-time stock prices. This project features integration with financial APIs and a
+                                user-friendly interface for monitoring stock market trends.</p>
+                            <div class="mt-auto btn-container">
+                                <a href="https://github.com/abbestlm/Stock" class="btn btn-primary btn-outline-light w-100" target="_blank">Source Code</a>
+                            </div>
+                            <!-- Progress Bar -->
+                            <div class="progress mt-3">
+                                <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100"
+                                    aria-valuemin="0" aria-valuemax="100">Completed</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
-
 
 
     <section class="py-5 animated-section" id="about-me" style="background-color: #007bff; color: white;">
